Remove several warnings.